--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,18 @@ dependencies = [
   "gunicorn>=25.1.0",
 ]
 
+[tool.hatch.build.targets.wheel]
+packages = ["src/runtime"]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["test"]
+
 [tool.pyright]
 venvPath = "."
 venv = ".venv"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
